--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,6 +8,6 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-EXPOSE 8000
+EXPOSE 80 443
 
-CMD ["python", "src/app.py"]
+CMD ["uvicorn", "--port", "80", "--host", "0.0.0.0", "--reload", "src.app:app"]
