--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,15 @@ exceptiongroup==1.2.2
 fastapi==0.115.11
 h11==0.14.0
 idna==3.10
+iniconfig==2.1.0
+packaging==24.2
+pluggy==1.5.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyMonad==2.4.0
+pytest==8.3.5
 sniffio==1.3.1
 starlette==0.46.1
+tomli==2.2.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
