--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+aioredis==2.0.1
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
 click==8.1.8
 exceptiongroup==1.2.2
 fastapi==0.115.11
@@ -12,6 +14,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 PyMonad==2.4.0
 pytest==8.3.5
+pytest-asyncio==0.26.0
 sniffio==1.3.1
 starlette==0.46.1
 tomli==2.2.1
